--- a/photography.css
+++ b/photography.css
@@ -21,7 +21,7 @@ html {
     background-color: #0f0f0f;
     overflow: hidden;
     position: absolute;
-    margin:4vh;
+    margin:4vh 0;
   }
   
   /* Style the links inside the navigation bar */
@@ -29,7 +29,7 @@ html {
     float: center;
     color: #f2f2f2;
     text-align: center;
-    padding: 6vh 6vh;
+    padding: 6vh 4vw;
     text-decoration: none;
     font-size: 3vh;
     font-family: Arial, Helvetica, sans-serif;
@@ -58,16 +58,15 @@ html {
 /* styling for the banner which is the Annika Marriner Photography logo*/
 .banner {
     display: inline-block;
-    background-color: #0f0f0f;
-    height: 30vh;
+    background-color: #100F10;
+    height: 24vh;
     width: 100%;
     position: relative;
+    background-image: url("images/AMlogo.png");
+    background-repeat: no-repeat;
+    background-position:center top;
 }
 
-/*gives the logo img a height of 22vh*/
-img{
-    height:25vh;
-}
 
 /*styling for navagtion which appears under the banner*/
 .navigation {
