--- a/photography.css
+++ b/photography.css
@@ -80,7 +80,7 @@ html {
 
 /*styling for navagtion which appears under the banner*/
 .navigation {
-    height: 2em;
+    height: 4.5em;
     width: 100%;
     position: absolute;
     bottom: 0px;
@@ -361,16 +361,29 @@ h1{
     width: 100%;
 }
 
+.row {
+  display: flex;
+}
 
+.column {
+  flex: 33.33%;
+  padding: 2px;
+  margin-bottom:10vh;
+  margin-top:5vh;
+}
 
 .content-ourcustomers{
-    height:10vh;
+    height:20vh;
     width:100%;
-    color:darkorange;
     margin-bottom:90vh;
 }
 
-
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+}
 
 /*css styling for contact us page*/
 .hero-image{
